# clipboard-copy-tool

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  build.rs
assets/: tailwind.css
src/: main.rs
