[package]
name = "clipboard_copy"
version = "0.1.0"
authors = ["Tela <telayiu@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
dioxus = { version = "0.7.1", features = ["desktop"] }
dioxus-desktop = "0.7.5"
image = "0.25.10"
rfd = "0.17.2"


[build-dependencies]
winres = "0.1.12"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
